--- a/pages/academico/grupos--editar.html
+++ b/pages/academico/grupos--editar.html
@@ -407,7 +407,8 @@
               </div>
                 <div class="row mb-lg">
                   <div class="col-sm-12">
-                    <label class="form-label semibold" for="">Descrição</label>
+                    <label class="form-label semibold" for="">Descrição<span
+                            class="semibold text-danger h4">*</span></label>
                     <textarea rows="4" class="form-control" placeholder="Descrição">Grupo de cursos destinado a adolescentes, de 14 a 18 anos</textarea>
                   </div>
                 </div>
