--- a/pages/academico/grupos.html
+++ b/pages/academico/grupos.html
@@ -621,7 +621,8 @@
               </div>
               <div class="row mb-lg">
                 <div class="col-sm-12">
-                  <label class="form-label semibold" for="">Descrição</label>
+                  <label class="form-label semibold" for="">Descrição<span
+                          class="semibold text-danger h4">*</span></label>
                   <textarea rows="4" class="form-control" placeholder="Descrição"></textarea>
                 </div>
               </div>
